src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs-earlybound-regions.nll.stderr
error: lifetime may not live long enough
  --> $DIR/ex3-both-anon-regions-both-are-structs-earlybound-regions.rs:9:5
   |
LL | fn foo<'a, 'b>(mut x: Vec<Ref<'a>>, y: Ref<'b>)
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |     x.push(y);
   |     ^^^^^^^^^ argument requires that `'b` must outlive `'a`

error: aborting due to previous error

