src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs-earlybound-regions.rs
struct Ref<'a> {
    x: &'a u32,
}

fn foo<'a, 'b>(mut x: Vec<Ref<'a>>, y: Ref<'b>)
    where &'a (): Sized,
          &'b u32: Sized
{
    x.push(y); //~ ERROR lifetime mismatch
}

fn main() {}
